[package]
name = "pikaboo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
dotenvy = "0.15.7"
futures = "0.3.31"
libsql = "0.9.11"
lru = "0.16.0"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", version = "0.16.0" }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", version = "0.16.0" }
twilight-mention = { git = "https://github.com/twilight-rs/twilight.git", version = "0.16.0" }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", version = "0.16.0" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", version = "0.16.0", features = [
    "builder",
] }
